--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@
 [Ll]ogs/
 [Uu]ser[Ss]ettings/
 Arena_SEMPRJ/Assets/StarterAssets
+Arena_SEMPRJ/Assets/Jammo-Character
+Arena_SEMPRJ/Assets/Scenes/CharacterSetupScene
 
 # MemoryCaptures can get excessive in size.
 # They also could contain extremely sensitive data
